--- a/src/main/resources/assets/gateways/lang/en_us.json
+++ b/src/main/resources/assets/gateways/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.gateways.gateway_hub": "Gateway Hub",
   "block.gateways.resonant_amethyst": "Resonant Amethyst",
   "block.gateways.cracked_amethyst": "Cracked Amethyst",
+  "block.gateways.resonance_conduit": "Resonance Conduit",
 
   "itemgroup.gateways": "Gateways"
 }
