lots more fixes, and recipes and sounds and stuff

--- a/src/main/resources/assets/gateways/lang/en_us.json
+++ b/src/main/resources/assets/gateways/lang/en_us.json
@@ -6,5 +6,7 @@
   "block.gateways.cracked_amethyst": "Cracked Amethyst",
   "block.gateways.resonance_conduit": "Resonance Conduit",
 
+  "subtitles.gateways.gateway_teleport": "Gateway teleported",
+
   "itemgroup.gateways": "Gateways"
 }
