--- a/src/main/resources/assets/gateways/lang/en_us.json
+++ b/src/main/resources/assets/gateways/lang/en_us.json
@@ -4,7 +4,7 @@
   "block.gateways.gateway_hub": "Gateway Hub",
   "block.gateways.resonant_amethyst": "Resonant Amethyst",
   "block.gateways.cracked_amethyst": "Cracked Amethyst",
-  "block.gateways.cracked_resonant_amethyst": "Cracked Resonant cAmethyst",
+  "block.gateways.cracked_resonant_amethyst": "Cracked Resonant Amethyst",
   "block.gateways.resonance_conduit": "Resonance Conduit",
 
   "subtitles.gateways.gateway_teleport": "Gateway teleported",
